# hargrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: aggregates.rs  filter.rs  har.rs  input.rs  main.rs  output.rs  overview.rs
tests/: integration.rs
tests/fixtures/: malformed.har  minimal.har  valid.har
