[package]
name = "hargrep"
version = "0.1.0"
edition = "2024"
description = "A Unix-style CLI tool for querying HAR files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/brunojm/hargrep"
keywords = ["har", "http", "grep", "cli", "network"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
